--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // 主题色
-$primary-color: #00f0ff;
-$primary-color-light: rgba(0, 240, 255, 0.5);
+$primary-color: #33ff3b;
+$primary-color-light: rgba(51, 255, 59, 0.5);
 $primary-color-dark: darken($primary-color, 20%);
 
 // 背景色
@@ -10,8 +10,8 @@ $bg-tertiary: #002433;
 $bg-scrollbar: #003344;
 
 // 文字颜色
-$text-primary: #00f0ff;
-$text-secondary: #00d6e4;
+$text-primary: #33ff3b;
+$text-secondary: $primary-color-light;
 
 // 字体
 $font-family-mono: 'Share Tech Mono', 'Consolas', 'DejaVu Sans Mono', 'Lucida Console', 'Courier New', monospace;
