菜单页面样式更新

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,10 @@
 // 主题色
-$primary-color: #2eb7eb;
+$primary-color: #36c2ff;
 $primary-color-light: rgba(51, 255, 59, 0.7);
 $primary-color-dark: darken($primary-color, 20%);
 
 // 背景色
-$bg-primary: #000000;
+$bg-primary: #010102;
 $bg-secondary: #001622;
 $bg-tertiary: #002433;
 $bg-scrollbar: #003344;
