--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,12 @@
 // 主题色
-$primary-color: #36c2ff;
+$primary-color: #36c2ff; // #00ff00
 $primary-color-light: rgba(51, 255, 59, 0.7);
 $primary-color-dark: darken($primary-color, 20%);
+$primary-green: #00ff00;
+$primary-orange: #ff6b00;
+$dark-bg: #1a1a1a;
+$darker-bg: #000000;
+$highlight-color: #ffffff;
 
 // 背景色
 $bg-primary: #010102;
@@ -12,6 +17,7 @@ $bg-scrollbar: #003344;
 // 文字颜色
 $text-primary: #33ff3b;
 $text-secondary: $primary-color-light;
+$text-color: rgba(255, 255, 255, .6);
 
 // 字体
 $font-family-mono: 'Share Tech Mono', 'Consolas', 'DejaVu Sans Mono', 'Lucida Console', 'Courier New', monospace;
