--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // 主题色
 $primary-color: #36c2ff; // #00ff00
 $primary-color-light: rgba(51, 255, 59, 0.7);
-$primary-color-dark: darken($primary-color, 20%);
+$primary-color-dark: scale-color($primary-color, $lightness: -20%);
 $primary-green: #00ff00;
 $primary-orange: #ff6b00;
 $dark-bg: #1a1a1a;
