--- a/src/styles/transitions.scss
+++ b/src/styles/transitions.scss
@@ -213,19 +213,19 @@
 @keyframes turnOnBrightness {
   0% {
     opacity: 0;
-    filter: brightness(2);
+    filter: brightness(.1);
   }
   10% {
     opacity: 1;
-    filter: brightness(3);
+    filter: brightness(.5);
   }
   20% {
     opacity: 0.8;
-    filter: brightness(2);
+    filter: brightness(.3);
   }
   30% {
     opacity: 1;
-    filter: brightness(1.5);
+    filter: brightness(.2);
   }
   100% {
     opacity: 1;
