adjust global style

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 $primary-color: #01fcb2; // #00ff00
 $primary-color-light: rgba(51, 255, 59, 0.7);
 $primary-color-dark: scale-color($primary-color, $lightness: -20%);
-$primary-green: #00ff00;
+$primary-green: #0bea00;
 $primary-orange: #ff6b00;
 $dark-bg: #02090c;
 $darker-bg: #000000;
