--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 // 主题色
-$primary-color: #01fcb2; // #00ff00
+$primary-color: #53fe8b; // #00ff00
 $primary-color-light: rgba(51, 255, 59, 0.7);
 $primary-color-dark: scale-color($primary-color, $lightness: -20%);
 $primary-green: #0bea00;
@@ -19,16 +19,16 @@ $border-color-light: rgba($primary-color, 0.1);
 // 文字颜色
 $text-primary: #33ff3b;
 $text-secondary: $primary-color-light;
-$text-color: rgba(255, 255, 255, .6);
+$text-color: rgba(255, 255, 255, .8);
 
 // 字体
 $font-family-mono: 'Share Tech Mono', 'Consolas', 'DejaVu Sans Mono', 'Lucida Console', 'Courier New', monospace;
 
 // 间距
-$spacing-xs: 0.25rem;
-$spacing-sm: 0.5rem;
-$spacing-md: 1rem;
-$spacing-lg: 2rem;
+$spacing-xs: 4px;
+$spacing-sm: 8px;
+$spacing-md: 12px;
+$spacing-lg: 16px;
 $spacing-xl: 4rem;
 
 // 圆角
